--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f9;
     color: #333;
-    line-height: 1.6;
+    line-height: 1.5;
 }
 
 .container {
@@ -24,15 +24,29 @@ body {
     color: #fff;
     text-align: center;
     padding: 20px 0;
+    justify-content: center;
 }
 
-.header h1 {
+#slackProfilePicture {
+    border-radius: 50%;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+#title {
     font-size: 2.5em;
     margin-bottom: 10px;
 }
 
 .header p {
     font-size: 1.2em;
+    padding: 10px 0px;
+}
+
+#slackDisplayName{
+    color: black;
+    font-weight: 600;
+    font-style: italic;
 }
 
 .main {
@@ -55,6 +69,11 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border:1px solid white;
+}
+
+.goal:hover {
+    border-color: black;
 }
 
 .goal h2 {
@@ -74,12 +93,23 @@ body {
     text-align: center;
     align-items: center;
     display: flex;
-    padding: 20px 0;
+    flex-direction: column;
+    padding: 20px 0px;
     justify-content: center;
+    gap:10px
 }
 
-.footer p {
-    font-size: 0.9em;
+.footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    color: #6a11cb;
+}
+
+.footer p:hover {
+    color: #6a11cb;
 }
 
 /* Responsive Styles */
@@ -93,27 +123,37 @@ body {
     }
 
     .goal h2 {
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
 }
 
 @media (min-width: 1024px) {
     .container {
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 20px;
         display: flex;
         flex-direction: column;
     }
+
+    .intro{
+        display: flex;
+        flex-direction: row;
+        gap:20px;
+    }
+
 
     .goals {
         display: flex;
         flex-direction: column;
     }
 
-    .goal-div {
+    .goal-container {
         display: flex;
         gap: 20px;
     }
+
+    .footer{
+       flex-direction: row;
+       gap:30px;
+       font-size: 15px;
+    }
+ 
 }
