--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     padding: 20px 0;
 }
 
-#slackProfilePicture {
+.slackProfilePicture {
     margin-bottom: 10px;
     margin-top: 10px;
    width: 100%;
@@ -99,6 +99,14 @@ body {
     text-decoration: none;
     margin: 0 10px;
 }
+
+.footer a:hover{
+color:#6a11cb;
+}
+
+.footer p:hover{
+    color:#6a11cb;
+    }
 
 /* Responsive Styles */
 @media (max-width: 768px) {
