--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     padding: 20px 0;
 }
 
-.slackProfilePicture {
+.slack-Profile-Picture {
     margin-bottom: 10px;
     margin-top: 10px;
    width: 100%;
